# server

.history/zkforserver/: Cargo_20241002164412.toml  Cargo_20241015141755.toml
zkforserver/: .gitignore  Cargo.toml  QmRb7qWfuB6UUig5nUisP8tSNbzkizXj8qxDb1gfWDfWMA  QmZr5wFpx9HQ5ABF4yFX1FufMStLTpwzczVGmCpVvTRcbD  Receipt
zkforserver/host/: Cargo.toml
zkforserver/host/src/: main.rs
zkforserver/methods/guest/: Cargo.toml
zkforserver/methods/guest/src/: main.rs
zkforserver/zkcore/: Cargo.toml
zkforserver/zkcore/src/: lib.rs
