[package]
name = "guest2"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "1.1.1", default-features = false, features = ['std'] }
ipfs-unixfs={ version = "0.2.0", default-features = false }#isok
zkcore={path="../../zkcore"}
rsa="0.9"
aes-gcm="0.10"
cipher="0.4"
sha2="0.10"
hex="0.4"

